@@ -1,3 +1,8 @@
+TAG: strainload-6-0-14-2
+DATE: 07/31/2019
+STAFF: lec 
+TR12232/added db.setTrace()
+
 TAG: strainload-6-0-14-1
 DATE: 04/03/2019
 STAFF: lec 
